회원가입 화면 인증번호 입력 버튼을 추가하라
화면에 인증번호 입력버튼과 인증번호를 입력할 수 있는 칸을 추가합니다.
인증번호 전송을 클릭하면 자동으로 이메일 칸이 읽기전용으로 바뀝니다.
잘못된 이메일 주소라면 읽기전용이 해제됩니다.

--- a/src/main/resources/templates/users/users-save.mustache
+++ b/src/main/resources/templates/users/users-save.mustache
@@ -21,6 +21,13 @@
                 <label for="email"> 이메일 </label>
                 <input type="text" class="form-control" id="email" placeholder="이메일을 입력하세요">
             </div>
+            <button type="button" class="btn btn-primary" id="btn-sendMessage">인증번호 전송</button>
+
+            <div class="form-group">
+                <label for="authenticationNumber"> 인증번호 </label>
+                <input type="text" class="form-control" id="authenticationNumber" placeholder="인증번호를 입력하세요">
+            </div>
+
             <div class="form-group">
                 <label for="nickname"> 닉네임 </label>
                 <input type="text" class="form-control" id="nickname" placeholder="닉네임을 입력하세요">
