프런트에 사용자 수정 요청을 추가하라
수정에는 아이디가 필요하므로 화면에 아이디를 추가합니다.
또한 수정버튼 클릭 시, 비동기로 수정을 요청하도록 추가합니다.

--- a/src/main/resources/templates/users/users-update.mustache
+++ b/src/main/resources/templates/users/users-update.mustache
@@ -6,6 +6,10 @@
     <div class="col-md-4">
         <form>
             <div class="form-group">
+                <label for="id"> 회원번호 </label>
+                <input type="text" class="form-control" id="id" value="{{user.id}}" readonly>
+            </div>
+            <div class="form-group">
                 <label for="profileImage"> 프로필 사진 </label>
                 <input type="text" class="form-control" id="profileImage" value="{{user.profileImage}}">
             </div>
