--- a/src/main/resources/templates/users/users-save.mustache
+++ b/src/main/resources/templates/users/users-save.mustache
@@ -15,7 +15,7 @@
             </div>
             <div class="form-group">
                 <label for="password"> 비밀번호 </label>
-                <input type="text" class="form-control" id="password" placeholder="비밀번호를 입력하세요">
+                <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요">
             </div>
             <div class="form-group">
                 <label for="email"> 이메일 </label>
