--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,6 +5,7 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/users/save" role="button" class="btn btn-primary">회원가입</a>
+            <a href="/studys/save" role="button" class="btn btn-primary">스터디 생성</a>
             {{#userName}}
                 Logged in as: <span id="user">{{userName}}</span>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
