--- a/src/main/resources/templates/studys/studys-save.mustache
+++ b/src/main/resources/templates/studys/studys-save.mustache
@@ -3,7 +3,7 @@
 <h1>스터디 생성</h1>
 
 <div class="col-md-12">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form>
             <div class="form-group">
                 <label for="name"> 스터디 이름 </label>
@@ -15,39 +15,60 @@
             </div>
             <div class="form-group">
                 <label for="contact"> 연락처 </label>
-                <input type="text" class="form-control" id="contact" placeholder="연락처를 입력하세요(카카오 , sns, 전화번호 등등)">
+                <input type="text" class="form-control" id="contact" placeholder="연락처를 입력하세요(카카오 id, sns, 전화번호 등등)">
             </div>
             <div class="form-group">
                 <label for="size"> 인원 제한 </label>
-                <input type="number" class="form-control" id="size" placeholder="인원 제한을 입력하세요">
+                <input type="number" class="form-control" id="size" placeholder="인원 제한을 입력하세요(1~20)">
             </div>
+        </form>
+        <form class="form-inline">
             <div class="form-group">
                 <label for="startDate"> 시작 날짜 </label>
-                <input type="datetime-local" class="form-control" id="startDate" placeholder="시작 날짜를 입력하세요">
+                <input type="date" class="form-control" id="startDate">
             </div>
             <div class="form-group">
                 <label for="endDate"> 종료 날짜 </label>
-                <input type="datetime-local" class="form-control" id="endDate" placeholder="종료 날짜를 입력하세요">
+                <input type="date" class="form-control" id="endDate">
             </div>
+        </form>
+        <form class="form-inline">
             <div class="form-group">
-                <label for="day"> 요일 </label>
-                <input type="text" class="form-control" id="day" placeholder="요일을 입력하세요">
+                <label for="day"> 요일
+                    <select id="day">
+                        {{#day}}
+                            <option value="{{code}}">{{title}}</option>
+                        {{/day}}
+                    </select>
+                </label>
             </div>
             <div class="form-group">
                 <label for="startTime"> 시작 시간 </label>
-                <input type="text" class="form-control" id="startTime" placeholder="시작 시간을 입력하세요">
+                <input type="time" class="form-control" id="startTime">
             </div>
             <div class="form-group">
                 <label for="endTime"> 종료 시간 </label>
-                <input type="text" class="form-control" id="endTime" placeholder="종료 시간을 입력하세요">
+                <input type="time" class="form-control" id="endTime">
+            </div>
+        </form>
+        <form>
+            <div class="form-group">
+                <label for="studyState"> 스터디 상태
+                    <select id="studyState">
+                        {{#studyState}}
+                            <option value="{{code}}">{{title}}</option>
+                        {{/studyState}}
+                    </select>
+                </label>
             </div>
             <div class="form-group">
-                <label for="studyState"> 스터디 상태 </label>
-                <input type="text" class="form-control" id="studyState" placeholder="스터디 상태를 입력하세요">
-            </div>
-            <div class="form-group">
-                <label for="zone"> 지역 </label>
-                <input type="text" class="form-control" id="zone" placeholder="지역을 입력하세요">
+                <label for="zone"> 지역
+                    <select id="zone">
+                        {{#zone}}
+                            <option value="{{code}}">{{title}}</option>
+                        {{/zone}}
+                    </select>
+                </label>
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">취소</a>
