--- a/src/main/resources/templates/studys/studys-update.mustache
+++ b/src/main/resources/templates/studys/studys-update.mustache
@@ -83,7 +83,7 @@
         </form>
         <a href="/" role="button" class="btn btn-secondary">취소</a>
         <button type="button" class="btn btn-primary" id="btn-update-study">수정</button>
-        <button type="button" class="btn btn-primary" id="btn-delete-study">삭제</button>
+        <button type="button" class="btn btn-danger" id="btn-delete-study">삭제</button>
     </div>
 </div>
 
