베스트셀러 목록 조회 화면을 추가하라
인터파크 IT 베스트셀러 API를 기반으로 목록을 볼 수 있는 화면을
추가합니다.

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,11 +1,12 @@
 {{>layout/header}}
 
-<h1>Book Club12345678</h1>
+<h1>Book Club</h1>
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
             <a href="/users/save" role="button" class="btn btn-primary">회원가입</a>
             <a href="/studys/save" role="button" class="btn btn-primary">스터디 생성</a>
+            <a href="/books/bestseller" role="button" class="btn btn-primary">베스트셀러 조회</a>
             {{#userName}}
                 Logged in as: <span id="user">{{userName}}</span>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
