홈페이지 메인화면 스터디 필드명을 개선하라
홈페이지 메인화면에 나타나는 제목의 필드명을 title에서 name으로
개선합니다.

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -27,7 +27,7 @@
         {{#study}}
             <tr>
                 <td>{{id}}</td>
-                <td><a href="/studys/update/{{id}}">{{title}}</a></td>
+                <td><a href="/studys/update/{{id}}">{{name}}</a></td>
                 <td>{{size}}</td>
             </tr>
         {{/study}}
