--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -21,6 +21,7 @@
             <th>스터디 번호</th>
             <th>제목</th>
             <th>인원제한</th>
+            <th>방문하기</th>
         </tr>
         </thead>
         <tbody id="tbody">
@@ -29,6 +30,7 @@
                 <td>{{id}}</td>
                 <td><a href="/studys/update/{{id}}">{{name}}</a></td>
                 <td>{{size}}</td>
+                <td><a href="/studys/{{id}}">방문하기</a></td>
             </tr>
         {{/study}}
         </tbody>
