화면에서 사용자 로그인 요청을 추가하라
화면에서 로그인 버튼을 누르면 서버에 로그인을 요청하도록 추가합니다.

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -7,6 +7,7 @@
             <a href="/users/save" role="button" class="btn btn-primary">회원가입</a>
             <a href="/studys/save" role="button" class="btn btn-primary">스터디 생성</a>
             <a href="/books/bestseller" role="button" class="btn btn-primary">베스트셀러 조회</a>
+            <a href="/login" role="button" class="btn btn-primary">로그인하기</a>
             {{#userName}}
                 Logged in as: <span id="user">{{userName}}</span>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
