--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,10 +8,11 @@
             <a href="/studys/save" role="button" class="btn btn-primary">스터디 생성</a>
             <a href="/books/bestseller" role="button" class="btn btn-primary">베스트셀러 조회</a>
             <a href="/studys" role="button" class="btn btn-primary">스터디 게시판</a>
-            <a href="/login" role="button" class="btn btn-primary">로그인하기</a>
+            {{^userName}}
+                <a href="/login" role="button" class="btn btn-primary">로그인하기</a>
+            {{/userName}}
             {{#userName}}
-                Logged in as: <span id="user">{{userName}}</span>
-                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                <a href="/logout" role="button" class="btn btn-danger">로그아웃하기</a>
             {{/userName}}
         </div>
     </div>
