--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -7,11 +7,11 @@
         <form>
             <div class="form-group">
                 <label for="email"> 아이디 </label>
-                <input type="text" class="form-control" id="email" placeholder="이메일 입력하세요">
+                <input type="text" class="form-control" name="email" id="email" placeholder="이메일 입력하세요">
             </div>
             <div class="form-group">
                 <label for="password"> 비밀번호 </label>
-                <input type="password" class="form-control" id="password" placeholder="비밀번호 입력하세요">
+                <input type="password" class="form-control" name="password" id="password" placeholder="비밀번호 입력하세요">
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">취소</a>
