--- a/src/main/resources/templates/studys/studys-detail.mustache
+++ b/src/main/resources/templates/studys/studys-detail.mustache
@@ -55,8 +55,13 @@
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">취소</a>
-        <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
-        <button type="button" class="btn btn-danger" id="btn-cancel-study">신청 취소</button>
+        {{#notApplied}}
+            <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
+        {{/notApplied}}
+        {{#alreadyApplied}}
+            <button type="button" class="btn btn-danger" id="btn-cancel-study">신청 취소</button>
+        {{/alreadyApplied}}
+
     </div>
 </div>
 
