--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -7,3 +7,30 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top shadow-lg">
+    <a class="navbar-brand" href="/">BookClub</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ml-auto">
+            {{#user}}
+                <li class="nav-item">
+                    <a href="/studys/save" class="nav-link">스터디 생성</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/logout" class="nav-link">로그아웃</a>
+                </li>
+            {{/user}}
+            {{^user}}
+                <li class="nav-item">
+                    <a href="/login" class="nav-link">로그인</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/users/save" class="nav-link">회원가입</a>
+                </li>
+            {{/user}}
+        </ul>
+    </div>
+</nav>
