로그인일 때 상단 고정바의 항목을 개선하라
로그인이 되어있다면 추가 기능을 주도록 개선합니다.

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -15,22 +15,25 @@
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav ml-auto">
-            {{#user}}
+            {{#account}}
                 <li class="nav-item">
                     <a href="/studys/save" class="nav-link">스터디 생성</a>
                 </li>
                 <li class="nav-item">
+                    <a href="/users/update/{{id}}" class="nav-link">정보수정</a>
+                </li>
+                <li class="nav-item">
                     <a href="/logout" class="nav-link">로그아웃</a>
                 </li>
-            {{/user}}
-            {{^user}}
+            {{/account}}
+            {{^account}}
                 <li class="nav-item">
                     <a href="/login" class="nav-link">로그인</a>
                 </li>
                 <li class="nav-item">
                     <a href="/users/save" class="nav-link">회원가입</a>
                 </li>
-            {{/user}}
+            {{/account}}
         </ul>
     </div>
 </nav>
