--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -14,6 +14,11 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="/studys" class="nav-link">스터디 게시판</a>
+            </li>
+        </ul>
         <ul class="navbar-nav ml-auto">
             {{#account}}
                 <li class="nav-item">
