--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -7,7 +7,7 @@
             <a href="/users/save" role="button" class="btn btn-primary">회원가입</a>
             <a href="/studys/save" role="button" class="btn btn-primary">스터디 생성</a>
             <a href="/books/bestseller" role="button" class="btn btn-primary">베스트셀러 조회</a>
-            <a href="/studys" role="button" class="btn btn-primary">스터디 게시판</a>
+            <a href="/studys/open" role="button" class="btn btn-primary">스터디 게시판</a>
             {{^account}}
                 <a href="/login" role="button" class="btn btn-primary">로그인하기</a>
             {{/account}}
