화면에 보여지는 스터디 게시판의 종류를 추가하라
화면에 보여지는 스터디 게시판이 어떤 게시판인지 종류를 나타내도록
추가합니다.

--- a/src/main/resources/templates/studys/studys-list.mustache
+++ b/src/main/resources/templates/studys/studys-list.mustache
@@ -29,7 +29,6 @@
     <div class="row">
         <div class="col-md-2">
             <div class="panel panel-info">
-                <h4 class="card-title"></h4>
                 <ul class="list-group">
                     <li class="list-group-item"><a href="/studys/open">모집중</a></li>
                     <li class="list-group-item"><a href="/studys/close">모집마감</a></li>
@@ -39,6 +38,7 @@
         </div>
         <div class="card shadow col-md-9">
             <div class="card-body">
+                <h4 class="card-title">{{studyState}}</h4>
                 <table class="table table-hover" id='board_list'>
                     <thead>
                     <tr>
