화면에 책 게시판에 조회 조건을 추가하라
책 검색에 베스트셀러이외에 추천도서, 신간도서 목차를 추가합니다.

추천도서와 신간도서 목록 조회가 가능하도록 개선해야 합니다.

--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -15,13 +15,17 @@
 
     .img-wrapper {
         text-align: center;
-        width: 100%;
-        height: 100%;
         border: 0.1em solid #ccc;
         border-radius: 0.4em;
         background-color: #f3f3f3;
         box-shadow: 0.1em 0.1em 0.5em -0.2em #777;
-        margin: 1em 1em;
+        width: 225px;
+        margin: 50px 5px;
+    }
+
+    .img-wrapper:hover {
+        transform:scale(1.2);
+        transition: 0.5s;
     }
 
     img {
@@ -44,20 +48,36 @@
     }
 </style>
 
-<div class="gallery-wrapper">
-    <h1>베스트 셀러</h1>
-    <ul>
-        {{#book}}
-            <li>
-                <div class="img-wrapper">
-                    <img src="{{coverLargeUrl}}" alt="">
-                    <div>
-                        <h4>{{title}}</h4>
-                        <h4>{{pubDate}}</h4>
-                    </div>
+<div class="container-fluid" style="margin-top: 100px">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="panel panel-info">
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="/books/bestseller">베스트셀러</a></li>
+                    <li class="list-group-item"><a href="/books/recommend">추천도서</a></li>
+                    <li class="list-group-item"><a href="/studys/new">신간도서</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="card shadow col-md-10">
+            <div class="card-body">
+                <div class="gallery-wrapper">
+                    <ul>
+                        {{#book}}
+                            <li>
+                                <div class="img-wrapper">
+                                    <img src="{{coverLargeUrl}}" alt="">
+                                    <div class="title">
+                                        <h4>{{title}}</h4>
+                                        <h4>{{pubDate}}</h4>
+                                    </div>
+                                </div>
+                            </li>
+                        {{/book}}
+                    </ul>
                 </div>
-            </li>
-        {{/book}}
-    </ul>
+            </div>
+        </div>
+    </div>
 </div>
 {{>layout/footer}}
