--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="/studys" class="nav-link">스터디 게시판</a>
+                <a href="/studys/open" class="nav-link">스터디 게시판</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
