도서 목록 조회 요청에 종류 표시를 개선하라
도서 목록 조회요청에 종류를 나타낼 수 있도록 추가합니다.

--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -55,12 +55,13 @@
                 <ul class="list-group">
                     <li class="list-group-item"><a href="/books/bestseller">베스트셀러</a></li>
                     <li class="list-group-item"><a href="/books/recommend">추천도서</a></li>
-                    <li class="list-group-item"><a href="/studys/new">신간도서</a></li>
+                    <li class="list-group-item"><a href="/books/new">신간도서</a></li>
                 </ul>
             </div>
         </div>
         <div class="card shadow col-md-10">
             <div class="card-body">
+                <h4 class="card-title">{{bookType}}</h4>
                 <div class="gallery-wrapper">
                     <ul>
                         {{#book}}
