--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a href="/studys/open" class="nav-link">스터디 게시판</a>
             </li>
+            <li class="nav-item">
+                <a href="/books/bestseller" class="nav-link">도서 검색</a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             {{#account}}
