화면에 도서 검색을 추가하라
화면에 도서검색을 할 수 있는 입력칸과 버튼을 추가합니다.

--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -56,6 +56,13 @@
                     <li class="list-group-item"><a href="/books/bestseller">베스트셀러</a></li>
                     <li class="list-group-item"><a href="/books/recommend">추천도서</a></li>
                     <li class="list-group-item"><a href="/books/new">신간도서</a></li>
+                    <li class="list-group-item">
+                        <form class="navbar-form pull-left" action="/books/search">
+                            <label for="keyword"></label>
+                            <input type="text" id="keyword" name="keyword" placeholder="제목을 입력하세요">
+                            <button type="submit" class="btn btn-primary btn-sm">검색</button>
+                        </form>
+                    </li>
                 </ul>
             </div>
         </div>
