스터디 생성에 책 내용을 추가하라
스터디 생성에서 책 제목과 이미지 항목을 추가합니다.

--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -127,8 +127,8 @@
         <div class="modal_content" id="modal{{itemId}}"
              onclick="fadeOutModal('#{{itemId}}')">
             <form method="get" action="/studys/save">
-                <input type="hidden" name="title" value="{{title}}">
-                <input type="hidden" name="image" value="{{coverSmallUrl}}">
+                <input type="hidden" name="bookName" value="{{title}}">
+                <input type="hidden" name="bookImage" value="{{coverLargeUrl}}">
                 <h4>{{title}}</h4>
                 <table>
                     <tr>
