--- a/src/main/resources/templates/studys/studys-save.mustache
+++ b/src/main/resources/templates/studys/studys-save.mustache
@@ -10,6 +10,14 @@
                 <input type="text" class="form-control" id="name" placeholder="스터디 이름을 입력하세요">
             </div>
             <div class="form-group">
+                <label for="bookName"> 책제목 </label>
+                <input type="text" class="form-control" id="bookName" value="{{bookName}}" readonly>
+            </div>
+            <div class="form-group">
+                <label for="bookImage"></label>
+                <img src="{{bookImage}}" id="bookImage" alt="">
+            </div>
+            <div class="form-group">
                 <label for="description"> 설명 </label>
                 <input type="text" class="form-control" id="description" placeholder="설명을 입력하세요">
             </div>
