스터디 조회, 수정 시 책 정보 출력을 추가하라
스터디 조회, 수정 시 책 제목과 사진을 추가합니다.

--- a/src/main/resources/templates/studys/studys-list.mustache
+++ b/src/main/resources/templates/studys/studys-list.mustache
@@ -54,7 +54,7 @@
                     {{#studys}}
                         <tr>
                             <td class="text-center d-none d-md-table-cell">{{id}}</td>
-                            <td><a href='/studys/' + {{id}}>{{name}}</a></td>
+                            <td><a href='/studys/{{id}}'>{{name}}</a></td>
                             <td class="text-center d-none d-md-table-cell">{{applyCount}} / {{size}}</td>
                             <td class="text-center d-none d-md-table-cell">{{startDate}} ~ {{endDate}}</td>
                             <td class="text-center d-none d-md-table-cell">{{startTime}} ~ {{endTime}}</td>
