--- a/src/main/resources/templates/studys/studys-detail.mustache
+++ b/src/main/resources/templates/studys/studys-detail.mustache
@@ -14,6 +14,14 @@
                 <input type="text" class="form-control" id="name" value="{{study.name}}" readOnly>
             </div>
             <div class="form-group">
+                <label for="bookName"> 스터디 책 </label>
+                <input type="text" class="form-control" id="bookName" value="{{study.bookName}}" readOnly>
+            </div>
+            <div class="form-group">
+                <label for="bookImage"></label>
+                <img src="{{study.bookImage}}" id="bookImage" alt="">
+            </div>
+            <div class="form-group">
                 <label for="description"> 설명 </label>
                 <input type="text" class="form-control" id="description" value="{{study.description}}" readOnly>
             </div>
@@ -46,7 +54,7 @@
                 <input type="time" class="form-control" id="endTime" value="{{study.endTime}}" readOnly>
             </div>
             <div class="form-group">
-                <label for="studyState"> 스터디 상태 </label>
+                <label for="studyState"> 스터디 모집 상황 </label>
                 <input type="text" class="form-control" id="studyState" value="{{studyState}}" readOnly>
             </div>
             <div class="form-group">
