--- a/src/main/resources/templates/studys/studys-update.mustache
+++ b/src/main/resources/templates/studys/studys-update.mustache
@@ -14,6 +14,14 @@
                 <input type="text" class="form-control" id="name" value="{{study.name}}">
             </div>
             <div class="form-group">
+                <label for="bookName"> 스터디 책 </label>
+                <input type="text" class="form-control" id="bookName" value="{{study.bookName}}" readOnly>
+            </div>
+            <div class="form-group">
+                <label for="bookImage"></label>
+                <img src="{{study.bookImage}}" id="bookImage" alt="">
+            </div>
+            <div class="form-group">
                 <label for="description"> 설명 </label>
                 <input type="text" class="form-control" id="description" value="{{study.description}}">
             </div>
@@ -41,9 +49,7 @@
                 <label for="day"> 요일
                     <select id="day">
                         {{#day}}
-                            <option value="{{code}}" selected>
-                                {{title}}
-                            </option>
+                            <option value="{{code}}">{{title}}</option>
                         {{/day}}
                     </select>
                 </label>
@@ -62,9 +68,7 @@
                 <label for="studyState"> 스터디 상태
                     <select id="studyState">
                         {{#studyState}}
-                            <option value="{{code}}" selected>
-                                {{title}}
-                            </option>
+                            <option value="{{code}}">{{title}}</option>
                         {{/studyState}}
                     </select>
                 </label>
@@ -73,9 +77,7 @@
                 <label for="zone"> 지역
                     <select id="zone">
                         {{#zone}}
-                            <option value="{{code}}" selected>
-                                {{title}}
-                            </option>
+                            <option value="{{code}}">{{title}}</option>
                         {{/zone}}
                     </select>
                 </label>
