스터디 조회에 수정 버튼을 추가하라
만약 스터디 방장이 스터디를 조회한다면 수정할 수 있는 버튼을 추가합니다.

--- a/src/main/resources/templates/studys/studys-detail.mustache
+++ b/src/main/resources/templates/studys/studys-detail.mustache
@@ -69,6 +69,9 @@
         {{#alreadyApplied}}
             <button type="button" class="btn btn-danger" id="btn-cancel-study">신청 취소</button>
         {{/alreadyApplied}}
+        {{#studyManager}}
+            <button type="button" class="btn btn-warning" onclick="location.href='/studys/update/{{id}}'">수정</button>
+        {{/studyManager}}
 
     </div>
 </div>
