--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -31,4 +31,18 @@
         </div>
     </div>
 </div>
+<div class="col-xs-12">
+    <div class="col-xs-3">
+        <div>회원 수<br>content2</div>
+    </div>
+    <div class="col-xs-3">
+        <div>개설된 스터디<br>content2</div>
+    </div>
+    <div class="col-xs-3">
+        <div>진행중 스터디<br>content2</div>
+    </div>
+    <div class="col-xs-3">
+        <div>종료된 스터디<br>content2</div>
+    </div>
+</div>
 {{>layout/footer}}
