--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -26,6 +26,27 @@
         .carousel-caption {
             color: white;
         }
+
+        .col-xs-12 {
+            text-align: center;
+            white-space: nowrap !important;
+            max-width: 100%;
+            overflow: auto;
+        }
+        .col-xs-3 {
+            float: none !important;
+            display: inline-block !important;
+        }
+
+        .col-xs-3 div {
+            border: 2px solid black;
+            text-align: center;
+            height: 100px;
+            width: 150px;
+            display: block;
+            margin: 30px 20px;
+            padding: 20px
+        }
     </style>
 </head>
 <body>
