메인화면에 사용자와 스터디 갯수를 추가하라
메인화면에 사용자와 스터디 갯수를 추가합니다.

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -33,16 +33,16 @@
 </div>
 <div class="col-xs-12">
     <div class="col-xs-3">
-        <div>회원 수<br>content2</div>
+        <div>회원 수<br><h5>{{allAccountsCount}}</h5></div>
     </div>
     <div class="col-xs-3">
-        <div>개설된 스터디<br>content2</div>
+        <div>개설된 스터디<br><h5>{{allStudiesCount}}</h5></div>
     </div>
     <div class="col-xs-3">
-        <div>진행중 스터디<br>content2</div>
+        <div>진행중 스터디<br><h5>{{allOpenStudiesCount}}</h5></div>
     </div>
     <div class="col-xs-3">
-        <div>종료된 스터디<br>content2</div>
+        <div>종료된 스터디<br><h5>{{allEndStudiesCount}}</h5></div>
     </div>
 </div>
 {{>layout/footer}}
