--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -45,7 +45,7 @@
             width: 150px;
             display: block;
             margin: 30px 20px;
-            padding: 20px
+            padding: 20px 10px;
         }
     </style>
 </head>
