메인 화면에 footer를 추가하라
메인 화면에 footer를 추가합니다.

현재는 디자인만 만들었으므로 나중에 세부 항목을 개선해야 합니다.

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -5,49 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/js/app/header.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <style>
-        .carousel-inner {
-            margin-top: 70px;
-        }
-
-        .carousel {
-            background: white;
-            margin-top: 30px;
-        }
-
-        .carousel-item {
-            text-align: center;
-            min-height: 280px;
-        }
-
-        .carousel-caption {
-            color: white;
-        }
-
-        .col-xs-12 {
-            text-align: center;
-            white-space: nowrap !important;
-            max-width: 100%;
-            overflow: auto;
-        }
-        .col-xs-3 {
-            float: none !important;
-            display: inline-block !important;
-        }
-
-        .col-xs-3 div {
-            border: 2px solid black;
-            text-align: center;
-            height: 100px;
-            width: 150px;
-            display: block;
-            margin: 30px 20px;
-            padding: 20px 10px;
-        }
-    </style>
 </head>
 <body>
 
