화면에서 스터디 게시판을  개선하라
footer를 아래에 위치시키기 위해 스터디게시판에서 빈 여백의 공간을
늘리도록 개선하였습니다.

--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -2,6 +2,7 @@
 <style type="text/css">
     body {
         font-family: "Aller", "sans-serif";
+        margin: 0;
     }
 
     a:-webkit-any-link {
