--- a/src/main/resources/templates/users/users-save.mustache
+++ b/src/main/resources/templates/users/users-save.mustache
@@ -1,13 +1,22 @@
 {{>layout/header}}
-
+<link rel="stylesheet" type="text/css" href="/js/app/account.css">
 <h1>회원가입</h1>
 
 <div class="col-md-12">
     <div class="col-md-4">
         <form>
             <div class="form-group">
-                <label for="profileImage"> 프로필 사진 </label>
-                <input type="text" class="form-control" id="profileImage" placeholder="프로필사진을 입력하세요">
+                <label for="file"> 프로필 사진 </label>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-2 imgUp">
+                            <div class="imagePreview"></div>
+                            <label class="btn btn-primary">
+                                Upload<input type="file" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="name"> 이름 </label>
@@ -37,5 +46,5 @@
         <button type="button" class="btn btn-primary" id="btn-save">등록</button>
     </div>
 </div>
-
+<script src="/js/app/account.js"></script>
 {{>layout/footer}}
