--- a/src/main/resources/templates/users/users-save.mustache
+++ b/src/main/resources/templates/users/users-save.mustache
@@ -6,13 +6,13 @@
     <div class="col-md-4">
         <form>
             <div class="form-group">
-                <label for="file"> 프로필 사진 </label>
+                <label for="uploadFile"> 프로필 사진 </label>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-2 imgUp">
                             <div class="imagePreview"></div>
                             <label class="btn btn-primary">
-                                Upload<input type="file" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
+                                Upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
                             </label>
                         </div>
                     </div>
