--- a/src/main/resources/templates/users/users-update.mustache
+++ b/src/main/resources/templates/users/users-update.mustache
@@ -1,5 +1,5 @@
 {{>layout/header}}
-
+<link rel="stylesheet" type="text/css" href="/js/app/account.css">
 <h1>회원정보 수정</h1>
 
 <div class="col-md-12">
@@ -10,8 +10,18 @@
                 <input type="text" class="form-control" id="id" value="{{account.id}}" readonly>
             </div>
             <div class="form-group">
-                <label for="profileImage"> 프로필 사진 </label>
-                <input type="text" class="form-control" id="profileImage" value="{{account.profileImage}}">
+                <input type="hidden" id="profileImage" value="{{account.uploadFile.fileName}}">
+                <label for="uploadFile"> 프로필 사진 </label>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-2 imgUp">
+                            <div class="imagePreview"></div>
+                            <label class="btn btn-primary">
+                                Upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="name"> 이름 </label>
@@ -45,5 +55,5 @@
         <button type="button" class="btn btn-danger" id="btn-account-delete">삭제</button>
     </div>
 </div>
-
+<script src="/js/app/account.js"></script>
 {{>layout/footer}}
