사용자 수정을 위한 서비스를 개선하라
사용자 수정을 위한 서비스를 개선합니다.

--- a/src/main/resources/static/js/app/account.css
+++ b/src/main/resources/static/js/app/account.css
@@ -2,7 +2,7 @@ body {
     background-color:#f5f5f5;
 }
 
-.imagePreview {
+.imagePreview, .imgPreview {
     width: 250px;
     height: 250px;
     background-position: center center;
