사용자 수정 필드 설명을 개선하라
닉네임과 새로운 비밀번호는 선택으로, 비밀번호는 필수로 입력해야한다는
설명으로 개선합니다.

--- a/src/main/resources/templates/users/users-update.mustache
+++ b/src/main/resources/templates/users/users-update.mustache
@@ -33,15 +33,15 @@
                 <input type="text" class="form-control" id="email" value="{{account.email}}" readonly>
             </div>
             <div class="form-group">
-                <label for="nickname"> 닉네임 </label>
+                <label for="nickname"> 닉네임 (필수) </label>
                 <input type="text" class="form-control" id="nickname" value="{{account.nickname}}">
             </div>
             <div class="form-group">
-                <label for="password"> 비밀번호 </label>
+                <label for="password" style="color:#ff0000;"> 비밀번호 (필수) </label>
                 <input type="password" class="form-control" id="password" value="">
             </div>
             <div class="form-group">
-                <label for="newPassword"> 새로운 비밀번호 </label>
+                <label for="newPassword"> 새로운 비밀번호 (선택) </label>
                 <input type="password" class="form-control" id="newPassword" value="">
             </div>
             {{#studyName}}
