--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -89,7 +89,7 @@
                     <li class="list-group-item"><a href="/books/recommend">추천도서</a></li>
                     <li class="list-group-item"><a href="/books/new">신간도서</a></li>
                     <li class="list-group-item">
-                        <form class="navbar-form pull-left" action="/books/search" post="get">
+                        <form class="navbar-form pull-left" action="/books/search" method="get">
                             <label for="keyword"></label>
                             <input type="text" id="keyword" name="keyword" placeholder="제목을 입력하세요">
                             <button type="submit" class="btn btn-primary btn-sm">검색</button>
