화면에서 취소 설명을 개선하라
현재 이전 페이지 이동을 취소라고 되어있지만 돌아가기 단어를 사용해 더
직관적으로 개선합니다.

--- a/src/main/resources/templates/books/books-lists.mustache
+++ b/src/main/resources/templates/books/books-lists.mustache
@@ -146,7 +146,7 @@
                     </tr>
                 </table>
                 <button type="submit" class="btn btn-primary">스터디 만들기</button>
-                <button type="button" class="btn btn-danger">취소</button>
+                <button type="button" class="btn btn-danger">돌아가기</button>
             </form>
         </div>
     </div>
