--- a/src/main/resources/templates/studys/studys-update.mustache
+++ b/src/main/resources/templates/studys/studys-update.mustache
@@ -86,7 +86,7 @@
                 </label>
             </div>
         </form>
-        <a href="/studys/{{id}}" role="button" class="btn btn-secondary">취소</a>
+        <a href="/studys/{{id}}" role="button" class="btn btn-secondary">돌아가기</a>
         <button type="button" class="btn btn-primary" id="btn-update-study">수정</button>
         <button type="button" class="btn btn-danger" id="btn-delete-study">삭제</button>
     </div>
