--- a/src/main/resources/templates/users/users-update.mustache
+++ b/src/main/resources/templates/users/users-update.mustache
@@ -15,7 +15,7 @@
                     <div class="row">
                         <div class="col-sm-2 imgUp">
                             <div class="imagePreview">
-                                <img class="imgPreview" src="/images/{{uploadFile.fileName}}" alt="">
+                                    <img class="imgPreview" src="/images/{{uploadFile.fileName}}" alt="">
                             </div>
                             <label class="btn btn-primary">
                                 Upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
@@ -51,7 +51,7 @@
                 </div>
             {{/studyName}}
         </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
+        <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
         <button type="button" class="btn btn-primary" id="btn-update">수정 완료</button>
         <button type="button" class="btn btn-danger" id="btn-account-delete">삭제</button>
     </div>
