--- a/src/main/resources/templates/studys/studys-detail.mustache
+++ b/src/main/resources/templates/studys/studys-detail.mustache
@@ -62,7 +62,7 @@
                 <input type="text" class="form-control" id="zone" value="{{zone}}" readOnly>
             </div>
         </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
+        <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
         {{#notApplied}}
             <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
         {{/notApplied}}
