--- a/src/main/resources/templates/studys/studys-save.mustache
+++ b/src/main/resources/templates/studys/studys-save.mustache
@@ -70,7 +70,7 @@
                 </label>
             </div>
         </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
+        <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
         <button type="button" class="btn btn-primary" id="btn-save-study">등록</button>
     </div>
 </div>
