--- a/src/main/resources/templates/users/users-save.mustache
+++ b/src/main/resources/templates/users/users-save.mustache
@@ -42,7 +42,7 @@
                 <input type="text" class="form-control" id="nickname" placeholder="닉네임을 입력하세요">
             </div>
         </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
+        <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
         <button type="button" class="btn btn-primary" id="btn-save">등록</button>
     </div>
 </div>
