스터디 참여자 정보를 경로에 추가하라
스터디 참여자를 확인하는 경로에 해당 계정들의 정보를 추가합니다.

--- a/src/main/resources/templates/studys/studys-users-list.mustache
+++ b/src/main/resources/templates/studys/studys-users-list.mustache
@@ -12,7 +12,7 @@
                 <thead>
                 <tr>
                     <th class="text-center d-none d-md-table-cell">이름</th>
-                    <th class="w-40">이메일</th>
+                    <th class="text-center d-none d-md-table-cell">이메일</th>
                     <th class="text-center d-none d-md-table-cell">닉네임</th>
                 </tr>
                 </thead>
