스터디 요청에서 상단 링크를 개선하라
스터디 요청에서 계정이 존재하지 않는 상단 링크의 검사를 함수로 분리하도록 개선합니다.

--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -28,11 +28,11 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             {{#account}}
-                {{#admin}}
+                {{#studyManager}}
                     <li class="nav-item">
                         <a href="/studys/{{id}}/users" class="nav-link">스터디 참가자</a>
                     </li>
-                {{/admin}}
+                {{/studyManager}}
                 <li class="nav-item">
                     <a href="/users/update/{{id}}" class="nav-link">정보수정</a>
                 </li>
