화면에서 상단 고정 메뉴에 신청 스터디를 추가하라
화면에서 상단 고정 메뉴에 내가 신청한 스터디를 추가합니다.

화면만 추가하였으므로 요청시마다 검사하는 내용을 추가해야합니다.

--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -28,6 +28,11 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             {{#account}}
+                {{#studyApply}}
+                    <li class="nav-item">
+                        <a href="/studys/{{id}}" class="nav-link">신청 스터디</a>
+                    </li>
+                {{/studyApply}}
                 {{#studyManager}}
                     <li class="nav-item">
                         <a href="/studys/{{id}}/users" class="nav-link">스터디 참가자</a>
