스터디 신청 요청을 개선하라
이미 스터디의 방장이거나, 일반 사용자인 경우, 해당 스터디를 지원한 경우
등에 대해서 다른 버튼이 나오도록 개선합니다.

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -63,15 +63,17 @@
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
-        {{#notApplied}}
-            <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
-        {{/notApplied}}
-        {{#alreadyApplied}}
+        {{#account}}
+            {{^study}}
+                <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
+            {{/study}}
+        {{/account}}
+        {{#studyApplier}}
             <button type="button" class="btn btn-danger" id="btn-cancel-study">신청 취소</button>
-        {{/alreadyApplied}}
-        {{#studyManager}}
+        {{/studyApplier}}
+        {{#studyAdmin}}
             <button type="button" class="btn btn-warning" onclick="location.href='/studys/update/{{id}}'">수정</button>
-        {{/studyManager}}
+        {{/studyAdmin}}
 
     </div>
 </div>
