스터디 조회 요청을 개선하라
로그인을 하지 않아도 스터디 조회를 할 수 있도록 개선합니다.

--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -10,8 +10,8 @@
             <div class="panel panel-info">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="/studys/open">모집중</a></li>
-                    <li class="list-group-item"><a href="/studys/close">모집마감</a></li>
-                    <li class="list-group-item"><a href="/studys/end">종료</a></li>
+                    <li class="list-group-item"><a href="/studys/close">마감</a></li>
+                    <li class="list-group-item"><a href="/studys/end">완료</a></li>
                 </ul>
             </div>
         </div>
