--- a/app/src/main/resources/templates/books/books-lists.mustache
+++ b/app/src/main/resources/templates/books/books-lists.mustache
@@ -145,7 +145,8 @@
                         <td>{{publisher}}</td>
                     </tr>
                 </table>
-                <button type="submit" class="btn btn-primary">스터디 만들기</button>
+                <button type="submit" class="btn btn-primary">스터디 생성</button>
+                <button type="button" class="btn btn-warning" onclick="location.href='/studys/open?title={{title}}'">모집중 스터디</button>
                 <button type="button" class="btn btn-danger">돌아가기</button>
             </form>
         </div>
