--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -17,7 +17,14 @@
         </div>
         <div class="card shadow col-md-9" style="min-height:600px;">
             <div class="card-body">
-                <h4 class="card-title">{{studyState}}</h4>
+                <h4 class="card-title">
+                    {{#keyword}}
+                        {{studyState}}<br><{{.}}>
+                    {{/keyword}}
+                    {{^keyword}}
+                        {{studyState}}
+                    {{/keyword}}
+                </h4>
                 <table class="table table-hover" id='board_list'>
                     <thead>
                     <tr>
