화면에서 진행중 스터디를 개선하라
이전에는 화면의 진행중 스터디 갯수가 모집중 스터디였습니다.

갯수를 올바로 맞추기 위해 진행중 스터디 갯수로 개선합니다.

--- a/app/src/main/resources/templates/index.mustache
+++ b/app/src/main/resources/templates/index.mustache
@@ -39,7 +39,7 @@
         <div>개설된 스터디<br><h5>{{allStudiesCount}}</h5></div>
     </div>
     <div class="col-xs-3">
-        <div>진행중 스터디<br><h5>{{allOpenStudiesCount}}</h5></div>
+        <div>진행중 스터디<br><h5>{{allCloseStudiesCount}}</h5></div>
     </div>
     <div class="col-xs-3">
         <div>종료된 스터디<br><h5>{{allEndStudiesCount}}</h5></div>
