화면에서 작가 인터뷰 항목과 화면을 추가하라
화면에 작가 인터뷰 항목과 화면을 추가합니다.

현재 화면 페이만 추가되어있으므로 나중에 저장소에서 해당 기사내용을
불러와야 합니다.

--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a href="/books/bestseller" class="nav-link">도서 검색</a>
             </li>
+            <li class="nav-item">
+                <a href="/interviews" class="nav-link">작가 인터뷰</a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             {{#account}}
