--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -1,5 +1,6 @@
 {{>layout/header}}
 <div class="container-fluid" style="margin-top: 100px; text-align: center">
+    <button type="submit" id="crawlAll" class="btn btn-primary btn-sm">전체 크롤링</button>
     <div class="row">
         <div class="card shadow col-md-12">
             <div class="card-body">
