화면에서 페이징 이전 다음 버튼을 추가하라
화면에 페이징을 위한 이전페이지, 다음페이지 버튼을 추가합니다.

인터뷰 목록 조회 요청 화면에 페이징 계산을 추가해야 합니다.

--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -6,6 +6,19 @@
         <div class="card shadow col-md-12">
             <div class="card-body">
                 <h4 class="card-title" style="text-align: center;"></h4>
+                <form name="frmList" method="post">
+                    <input type="hidden" name="targetPage" value="1">
+                </form>
+                <div class="list_button_wrap">
+                    <div class="list_paging">
+                        <a class="btn_prev" href="javascript:void(0)">
+                            <img src="http://image.kyobobook.co.kr/ink/images/common/btn_prev03_on.gif" alt="이전">
+                        </a>
+                        <a class="btn_next" href="javascript:void(0)">
+                            <img src="http://image.kyobobook.co.kr/ink/images/common/btn_next03_on.gif" alt="이후">
+                        </a>
+                    </div>
+                </div>
                 <ul class="list_author_interview">
                     {{#interviews}}
                         <hr>
@@ -38,4 +51,5 @@
         </div>
     </div>
 </div>
+<script src="/js/app/interviews.js"></script>
 {{>layout/footer}}
