인터뷰 목록 조회 요청에 페이징을 추가하라
인터뷰 목록 조회 요청에 페이징을 추가합니다.

해당 페이지의 인터뷰 목록을 불러오는 서비스를 추가해야 합니다.

--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -6,7 +6,7 @@
         <div class="card shadow col-md-12">
             <div class="card-body">
                 <h4 class="card-title" style="text-align: center;"></h4>
-                <form name="frmList" method="post">
+                <form name="frmList" method="get">
                     <input type="hidden" name="targetPage" value="1">
                 </form>
                 <div class="list_button_wrap">
