--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -7,15 +7,28 @@
             <div class="card-body">
                 <h4 class="card-title" style="text-align: center;"></h4>
                 <form name="frmList" method="get">
-                    <input type="hidden" name="targetPage" value="1">
+                    <input type="hidden" name="targetPage" class="targetPage" value="{{targetPage}}">
+                    <input type="hidden" class="totalPage" value="{{totalPage}}">
+                    <input type="hidden" class="next" value="{{next}}">
                 </form>
                 <div class="list_button_wrap">
                     <div class="list_paging">
-                        <a class="btn_prev" href="javascript:void(0)">
-                            <img src="http://image.kyobobook.co.kr/ink/images/common/btn_prev03_on.gif" alt="이전">
+                        <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
+                            <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
                         </a>
-                        <a class="btn_next" href="javascript:void(0)">
-                            <img src="http://image.kyobobook.co.kr/ink/images/common/btn_next03_on.gif" alt="이후">
+                        <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{previous}}')">
+                            <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
+                        </a>
+                        {{#pageNumberList}}
+                            <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
+                                {{.}}
+                            </a>
+                        {{/pageNumberList}}
+                        <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{next}}')">
+                            <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
+                        </a>
+                        <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{totalPage}}')">
+                            <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
                         </a>
                     </div>
                 </div>
@@ -47,6 +60,25 @@
                         </li>
                     {{/interviews}}
                 </ul>
+                <div class="list_paging">
+                    <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
+                        <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
+                    </a>
+                    <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{previous}}')">
+                        <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
+                    </a>
+                    {{#pageNumberList}}
+                        <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
+                            {{.}}
+                        </a>
+                    {{/pageNumberList}}
+                    <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{next}}')">
+                        <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
+                    </a>
+                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{totalPage}}')">
+                        <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
