--- a/app/src/main/resources/static/js/app/account.css
+++ b/app/src/main/resources/static/js/app/account.css
@@ -15,7 +15,7 @@ body {
     box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
 }
 
-.btn-primary {
+.upload {
     width: 250px;
     display:block;
     border-radius:0px;
