--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -19,7 +19,7 @@
                                     <img class="imgPreview" src="/images/{{fileName}}" alt="">
                                 {{/account.uploadFile}}
                             </div>
-                            <label class="btn btn-primary">
+                            <label class="btn btn-primary upload">
                                 Upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
                             </label>
                         </div>
@@ -35,7 +35,7 @@
                 <input type="text" class="form-control" id="email" value="{{account.email}}" readonly>
             </div>
             <div class="form-group">
-                <label for="nickname"> 닉네임 (필수) </label>
+                <label for="nickname" style="color:#ff0000;"> 닉네임 (필수) </label>
                 <input type="text" class="form-control" id="nickname" value="{{account.nickname}}">
             </div>
             <div class="form-group">
@@ -54,7 +54,7 @@
             {{/account.study}}
         </form>
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
-        <button type="button" class="btn btn-primary" id="btn-update">수정 완료</button>
+        <button type="button" class="btn btn-primary" id="btn-account-update">수정 완료</button>
         <button type="button" class="btn btn-danger" id="btn-account-delete">삭제</button>
     </div>
 </div>
