화면에서 정보수정 시 비밀번호 수정 버튼을 추가하라
화면에서 정보수정 시 비밀번호 수정 버튼을 추가합니다.

--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -50,6 +50,7 @@
             {{/account.study}}
         </form>
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
+        <button type="button" class="btn btn-warning" onclick="location.href='/users/update/password/{{account.id}}'">비밀번호 수정</button>
         <button type="button" class="btn btn-primary" id="btn-account-update">수정 완료</button>
         <button type="button" class="btn btn-danger" id="btn-account-delete">삭제</button>
     </div>
