--- a/app/src/main/resources/templates/users/users-save.mustache
+++ b/app/src/main/resources/templates/users/users-save.mustache
@@ -43,7 +43,7 @@
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
-        <button type="button" class="btn btn-primary" id="btn-save">등록</button>
+        <button type="button" class="btn btn-primary" id="btn-account-save">가입</button>
     </div>
 </div>
 <script src="/js/app/account.js"></script>
