--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -20,7 +20,7 @@
                                 {{/account.uploadFile}}
                             </div>
                             <label class="btn btn-primary upload">
-                                Upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
+                                upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
                             </label>
                         </div>
                     </div>
