--- a/app/src/main/resources/static/js/app/account.css
+++ b/app/src/main/resources/static/js/app/account.css
@@ -5,11 +5,8 @@ body {
 .imagePreview, .imgPreview {
     width: 250px;
     height: 250px;
-    background-position: center center;
-    background:url(http://cliquecities.com/assets/no-image-e3699ae23f866f6cbdf8ba2443ee5c4e.jpg);
-    background-color:#fff;
     background-size: 250px 250px;
-    background-repeat:no-repeat;
+    background: #fff url(http://cliquecities.com/assets/no-image-e3699ae23f866f6cbdf8ba2443ee5c4e.jpg) no-repeat center center;
     display: inline-block;
     border-radius : 50%;
     box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
