--- a/app/src/main/resources/templates/users/users-save.mustache
+++ b/app/src/main/resources/templates/users/users-save.mustache
@@ -12,7 +12,7 @@
                         <div class="col-sm-2 imgUp">
                             <div class="imagePreview"></div>
                             <label class="btn btn-primary">
-                                Upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
+                                upload<input type="file" id="uploadFile" class="uploadFile img" value="Upload Photo" style="width: 0px;height: 0px;overflow: hidden;">
                             </label>
                         </div>
                     </div>
