시큐리티 세션사용을 개선하라
시큐리티 세션사용의 세부 정책을 추가합니다. 세션 갯수제한, 중복 로그인
방지, 로그인 검사 주소 등을 개선합니다

--- a/app/src/main/resources/templates/login.mustache
+++ b/app/src/main/resources/templates/login.mustache
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/js/app/login.css">
 
 <div class="login">
-    <form method="POST" action="/login">
+    <form method="POST" action="/loginprocess">
         <label for="username"><span>Email</span></label>
         <input type="text"
                id="username"
