로그인 페이지에 rememberme 기능을 추가하라
로그인 페이지에 rememberme를 추가하고 기능을 구현합니다

--- a/app/src/main/resources/templates/login.mustache
+++ b/app/src/main/resources/templates/login.mustache
@@ -15,6 +15,11 @@
                name="password"
                placeholder="비밀번호를 입력하세요">
         <p></p>
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="remember-me"> 로그인 기억하기
+            </label>
+        </div>
         <button id="btn-login2" type="submit">Log in</button>
     </form>
 </div>
